test/ll_parser_oper_standard_test.test
=== BRACKETED EXPRESSION: line ##:
a b c
^^^^^
    a b c
=== BRACKETED EXPRESSION: line ##:
a < b < c
^^^^^^^^^
    {|a|} < {|b|} < {|c|}
=== BRACKETED EXPRESSION: line ##:
[ x ( y ) z {{u, v, w}} m (n (p)) ]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    [x (y) z {{{|u|}, {|v|}, {|w|}}} m (n (p))]
=== BRACKETED EXPRESSION: line ##:
(, x, y 4,, z,,)
^^^^^^^^^^^^^^^^
    ({}, {|x|}, {|y 4|}, {}, {|z|}, {}, {})
=== BRACKETED EXPRESSION: line ##:
y += z
^^^^^^
    {|y|} += {|z|}
=== BRACKETED EXPRESSION: line ##:
x = y
^^^^^
    {|x|} = {|y|}
=== BRACKETED EXPRESSION: line ##:
w4 *= w5
^^^^^^^^
    {|w4|} *= {|w5|}
=== BRACKETED EXPRESSION: line ##:
w3 = w4
^^^^^^^
    {|w3|} = {|w4|}
=== BRACKETED EXPRESSION: line ##:
w2 += w3
^^^^^^^^
    {|w2|} += {|w3|}
=== BRACKETED EXPRESSION: line ##:
w1 = w2
^^^^^^^
    {|w1|} = {|w2|}
=== BRACKETED EXPRESSION: line ##:
x1, x2 += z1, z2
^^^^^^^^^^^^^^^^
    {|{|x1|}, {|x2|}|} += {|{|z1|}, {|z2|}|}
=== BRACKETED EXPRESSION: line ##:
x = y + z * w << q + u * v ** p
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    {|x|} =
        {|{|y|} + {|{|z|} * {|{|w|} << {|q|}|}|} +
          {|{|u|} * {|{|v|} ** {|p|}|}|}|}
=== BRACKETED EXPRESSION: line ##:
x < y < z
^^^^^^^^^
    {|x|} < {|y|} < {|z|}
=== BRACKETED EXPRESSION: line ##:
x = ( y < z )
^^^^^^^^^^^^^
    {|x|} = ({|y|} < {|z|})
=== BRACKETED EXPRESSION: line ##:
x = w < y < z
^^^^^^^^^^^^^
    {|x|} = {|{|w|} < {|y|} < {|z|}|}
=== BRACKETED EXPRESSION: line ##:
{t|1 2 3|b = (a, b, c), no d, e, f = (m; n; p): t}
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    {t: no d, e, f = (m ";" n ";" p), b = (a "," b "," c)|1 2 3|t}
=== BRACKETED EXPRESSION: line ##:
{X: Y = {* A, B, C *} | 1 2 3 |}
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    {X: Y = {* C, A, B *}|1 2 3|X}
=== BRACKETED EXPRESSION: line ##:
a + b - c
^^^^^^^^^
    {|a|} + {|b|} - {|c|}
=== BRACKETED EXPRESSION: line ##:
- a
^^^
    - {|a|}
=== BRACKETED EXPRESSION: line ##:
+ a - b - c
^^^^^^^^^^^
    {|+ {|a|}|} - {|b|} - {|c|}
=== BRACKETED EXPRESSION: line ##:
a + b * c + d
^^^^^^^^^^^^^
    {|a|} + {|{|b|} * {|c|}|} + {|d|}
=== BRACKETED EXPRESSION: line ##:
a + b * c / d * e + f
^^^^^^^^^^^^^^^^^^^^^
    {|a|} + {|{|{|b|} * {|c|}|} / {|{|d|} * {|e|}|}|} + {|f|}
=== BRACKETED EXPRESSION: line ##:
a + b * e ** d * f ** g
^^^^^^^^^^^^^^^^^^^^^^^
    {|a|} + {|{|b|} * {|{|e|} ** {|d|}|} * {|{|f|} ** {|g|}|}|}
=== BRACKETED EXPRESSION: line ##:
x + + y
^^^^^^^
    {|x|} + {|+ {|y|}|}
=== BRACKETED EXPRESSION: line ##:
x + {|+ y|}
^^^^^^^^^^^
    {|x|} + {|+ {|y|}|}
=== BRACKETED EXPRESSION: line ##:
x * * y
^^^^^^^
    {|x|} * {|* y|}
=== BRACKETED EXPRESSION: line ##:
x * {|* y|}
^^^^^^^^^^^
    {|x|} * {|* y|}
=== BRACKETED EXPRESSION: line ##:
x / y
^^^^^
    {|x|} / {|y|}
ERROR: in line ##: extra stuff at end of expression; deleted:
x / y / z
      ^^^
=== BRACKETED EXPRESSION: line ##:
x / y / z
^^^^^^^^^
    {|x|} / {|y|}
=== BRACKETED EXPRESSION: line ##:
NOT NOT x
^^^^^^^^^
    NOT {|NOT {|x|}|}
=== BRACKETED EXPRESSION: line ##:
x NOT y
^^^^^^^
    x NOT y
ERROR: in line ##: missing operand; error operand inserted:
(NOT)
     ^
=== BRACKETED EXPRESSION: line ##:
(NOT)
^^^^^
    (NOT ERROR'OPERAND)
=== BRACKETED EXPRESSION: line ##:
x AND y AND z
^^^^^^^^^^^^^
    {|x|} AND {|y|} AND {|z|}
=== BRACKETED EXPRESSION: line ##:
x AND NOT y AND NOT z
^^^^^^^^^^^^^^^^^^^^^
    {|x|} AND {|NOT {|y|}|} AND {|NOT {|z|}|}
=== BRACKETED EXPRESSION: line ##:
x AND y BUT NOT z OR w OR v
^^^^^^^^^^^^^^^^^^^^^^^^^^^
    {|{|x|} AND {|y|}|} [< BUT NOT >] {|{|z|} OR {|w|} OR {|v|}|}
ERROR: in line ##: illegal operator "OR" in expression beginnning with
       "AND"; changed to "AND":
x AND y OR z
        ^^
=== BRACKETED EXPRESSION: line ##:
x AND y OR z
^^^^^^^^^^^^
    {|x|} AND {|y|} AND {|z|}
=== BRACKETED EXPRESSION: lines ##-##:
while x == y:
^^^^^^^^^^^^^
    a + b
^^^^^^^^^
    {|while {|{|x|} == {|y|}|}|}:
        {|a|} + {|b|}
=== BRACKETED EXPRESSION: lines ##-##:
x, y = while z:
^^^^^^^^^^^^^^^
    c = a + b
^^^^^^^^^^^^^
    {|{|{|x|}, {|y|}|} = {|while {|z|}|}|}:
        {|c|} = {|{|a|} + {|b|}|}
=== BRACKETED EXPRESSION: lines ##-##:
while x == y, until v != w:
^^^^^^^^^^^^^^^^^^^^^^^^^^^
    p(q) = x[v]
^^^^^^^^^^^^^^^
    {|{|while {|{|x|} == {|y|}|}|}, {|until {|{|v|} != {|w|}|}|}|}:
        {|p (q)|} = {|x [v]|}
=== BRACKETED EXPRESSION: lines ##-##:
a, b = while x == y, until v != w:
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    foo (b) fum(c) = p, q
^^^^^^^^^^^^^^^^^^^^^^^^^
    {|{|{|a|}, {|b|}|} =
      {|{|while {|{|x|} == {|y|}|}|}, {|until {|{|v|} != {|w|}|}|}|}|}:
        {|foo (b) fum (c)|} = {|{|p|}, {|q|}|}
=== BRACKETED EXPRESSION: lines ##-##:
next x, next y, next z =:
^^^^^^^^^^^^^^^^^^^^^^^^^
    next x += 1
^^^^^^^^^^^^^^^
    next y += 1
^^^^^^^^^^^^^^^
    next z += 1
^^^^^^^^^^^^^^^
    {|{|{|next x|}, {|next y|}, {|next z|}|} =|}:
        {|next x|} += {|1|}
        {|next y|} += {|1|}
        {|next z|} += {|1|}
=== BRACKETED EXPRESSION: lines ##-##:
repeat 5 times:
^^^^^^^^^^^^^^^
    next x += 1
^^^^^^^^^^^^^^^
    {|repeat {|5|} times|}:
        {|next x|} += {|1|}
=== BRACKETED EXPRESSION: lines ##-##:
until z == x, at most 10 times:
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    next x += 1
^^^^^^^^^^^^^^^
    {|{|until {|{|z|} == {|x|}|}|}, {|[< at most >] {|10|} times|}|}:
        {|next x|} += {|1|}
=== BRACKETED EXPRESSION: lines ##-##:
next x, y =:
^^^^^^^^^^^^
    y = x
^^^^^^^^^
    next x += 1
^^^^^^^^^^^^^^^
    {|{|{|next x|}, {|y|}|} =|}:
        {|y|} = {|x|}
        {|next x|} += {|1|}
=== BRACKETED EXPRESSION: lines ##-##:
next x, y:
^^^^^^^^^^
    y = x
^^^^^^^^^
    next x += 1
^^^^^^^^^^^^^^^
    {|{|next x|}, {|y|}|}:
        {|y|} = {|x|}
        {|next x|} += {|1|}
=== BRACKETED EXPRESSION: line ##:
if x == y: foo ( a, b )
^^^^^^^^^^^^^^^^^^^^^^^
    if {|{|x|} == {|y|}|} ":" {|foo ({|a|}, {|b|})|}
=== BRACKETED EXPRESSION: lines ##-##:
if w == v:
^^^^^^^^^^
    c = d + e
^^^^^^^^^^^^^
    if {|{|w|} == {|v|}|}:
        {|c|} = {|{|d|} + {|e|}|}
=== BRACKETED EXPRESSION: line ##:
else if x != y: foo ( a, b )
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    [< else if >] {|{|x|} != {|y|}|} ":" {|foo ({|a|}, {|b|})|}
=== BRACKETED EXPRESSION: lines ##-##:
else if w != v:
^^^^^^^^^^^^^^^
    c = d + e
^^^^^^^^^^^^^
    [< else if >] {|{|w|} != {|v|}|}:
        {|c|} = {|{|d|} + {|e|}|}
=== BRACKETED EXPRESSION: line ##:
else: foo ( a, b )
^^^^^^^^^^^^^^^^^^
    else ":" {|foo ({|a|}, {|b|})|}
=== BRACKETED EXPRESSION: lines ##-##:
else:
^^^^^
    c = d + e
^^^^^^^^^^^^^
    else:
        {|c|} = {|{|d|} + {|e|}|}
=== BRACKETED EXPRESSION: line ##:
(a, {|b c|}, d, "e f", g)
^^^^^^^^^^^^^^^^^^^^^^^^^
    ({|a|}, {|b c|}, {|d|}, {|"e f"|}, {|g|})
